# moveit_simple_grasps

./: .travis.yml  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
action/: GenerateGrasps.action
config/: baxter_grasp_data.yaml  baxter_gripper.yaml  baxter_left_hand.yaml  baxter_right_hand.yaml  clam_grasp_data.yaml  nao_grasp_data.yaml  pepper_grasp_data.yaml  reem_grasp_data.yaml  reem_hand.yaml  romeo_grasp_data.yaml
include/moveit_simple_grasps/: baxter_data.h  custom_environment2.h  grasp_data.h  grasp_data_loader.h  grasp_filter.h  moveit_blocks.h  moveit_simple_grasps.h  reem_data.h  simple_grasps.h
launch/: grasp_filter_test.launch  grasp_generator_server.launch  grasp_test.launch  grasp_test_rviz.launch  simple_grasps.rviz
src/: grasp_data.cpp  grasp_filter.cpp  grasp_filter_test.cpp  moveit_simple_grasps.cpp  moveit_simple_grasps_server.cpp  moveit_simple_grasps_test.cpp  simple_grasps.cpp  simple_grasps_server.cpp  simple_grasps_test.cpp
